package je.applicatie.domain.soexintegratie.Adapters;

import org.springframework.stereotype.Service;

import java.util.Map;

@Service
public class BouwsteenAdapter {
    public Map<String, String> getApiData(String apiKey, String apiUrl){
        return null;
    }
    public void saveBooking(){}
}
