@startuml

class BouwsteenController{
    - service: ServiceStrategy
    - bouwsteen: Bouwsteen

    - chooseStrategy(String)
    + boekBouwsteen(String, Map<String, String>)
    + getOneBouwsteen(String, int)
    + getAllBouwstenen(String)
    + getAPIData(String)
}

interface ServiceStrategy{
    + saveBouwsteen(Bouwsteen)
    + getBouwsteenDataByID(id, Bouwsteen): Bouwsteen
    + getBouwstenen(Bouwsteen): List<Bouwsteen>
    + getAPIData()
}

package serviceImpls{
    class HotelServiceStrategyImpl{
        - repo: BouwsteenRepo
        - adapter: BouwsteenAdapter
        - apiUrl: String
        - apiKey: String
    }
    class TripServiceStrategyImpl{
        - repo: BouwsteenRepo
        - adapter: BouwsteenAdapter
        - apiUrl: String
        - apiKey: String
    }
}

interface Bouwsteen{
    + setDetails(Map<String, String>)
}

package bouwsteenImpls{
    class HotelBouwsteen{
        - name: String
        - city: String
        - durationInDays: int
    }
    class TripBouwsteen{
        - name: String
        - lengthInKM: int
    }
}

class BouwsteenRepo{
    + saveBouwsteen(Bouwsteen)
    + getBouwsteen(id, Bouwsteen): Bouwsteen
    + getAllBouwstenen(Bouwsteen): List<Bouwsteen>
}
class BouwsteenAdapter{
    + getAPIData(apiKey, apiUrl): Map<String, String>
    + saveBooking(Bouwsteen)
}


BouwsteenController --> ServiceStrategy : uses

HotelServiceStrategyImpl ..|> ServiceStrategy : implements
TripServiceStrategyImpl ..|> ServiceStrategy : implements
HotelBouwsteen ..|> Bouwsteen : implements
TripBouwsteen ..|> Bouwsteen : implements

ServiceStrategy --> BouwsteenRepo : uses
ServiceStrategy --> BouwsteenAdapter : uses

BouwsteenController --> Bouwsteen : uses








@enduml